--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asn1crypto==0.22.0
 attrs==17.2.0
 Automat==0.6.0
+certifi==2017.7.27.1
 cffi==1.10.0
 chardet==3.0.4
 constantly==15.1.0
@@ -21,11 +22,14 @@ PyDispatcher==2.0.5
 pymongo==3.4.0
 PyMySQL==0.7.11
 pyOpenSSL==17.2.0
+qiniu==7.1.4
 queuelib==1.4.2
 readability-lxml==0.6.2
+requests==2.18.4
 Scrapy==1.4.0
 service-identity==17.0.0
 six==1.10.0
 Twisted==17.5.0
+urllib3==1.22
 w3lib==1.18.0
 zope.interface==4.4.2
