--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ incremental==17.5.0
 ipaddress==1.0.18
 jieba==0.38
 lxml==3.8.0
+olefile==0.44
 parsel==1.2.0
+Pillow==4.2.1
 pyasn1==0.3.2
 pyasn1-modules==0.0.11
 pycparser==2.18
