--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ PyDispatcher==2.0.5
 pymongo==3.4.0
 PyMySQL==0.7.11
 pyOpenSSL==17.2.0
+python-dateutil==2.6.1
 qiniu==7.1.4
 queuelib==1.4.2
 readability-lxml==0.6.2
