--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.0.3
 cssselect==1.0.1
+dateparser==0.6.0
 enum34==1.1.6
 hyperlink==17.3.0
 idna==2.6
@@ -21,18 +22,21 @@ pyasn1==0.3.2
 pyasn1-modules==0.0.11
 pycparser==2.18
 PyDispatcher==2.0.5
-pymongo==3.4.0
 PyMySQL==0.7.11
 pyOpenSSL==17.2.0
 python-dateutil==2.6.1
+pytz==2017.2
 qiniu==7.1.4
 queuelib==1.4.2
 readability-lxml==0.6.2
+regex==2017.7.28
 requests==2.18.4
+ruamel.yaml==0.15.31
 Scrapy==1.4.0
 service-identity==17.0.0
 six==1.10.0
 Twisted==17.5.0
+tzlocal==1.4
 urllib3==1.22
 w3lib==1.18.0
 zope.interface==4.4.2
