--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2017.7.27.1
 cffi==1.10.0
 chardet==3.0.4
 constantly==15.1.0
+crcmod==1.7
 cryptography==2.0.3
 cssselect==1.0.1
 dateparser==0.6.0
@@ -16,6 +17,7 @@ ipaddress==1.0.18
 jieba==0.38
 lxml==3.8.0
 olefile==0.44
+oss2==2.3.3
 parsel==1.2.0
 Pillow==4.2.1
 pyasn1==0.3.2
