--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.idea
+*/.vscode
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
